<resources>
    <string name="app_name">Scheduler</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="lt">&lt;</string>
    <string name="gt">&gt;</string>
    <string name="plus">+</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="remove">remove</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
</resources>
